# checkrr_api_design_swagger.yaml
@@ -124,6 +124,316 @@ paths:
         "400":
           description: Invalid or expired token
 
+  /api/v1/candidates:
+    post:
+      summary: Creates a candidate along with respective report
+      operationId: createCandidateWithReport
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CandidateGeneralInfo'
+      responses:
+        "201":
+          description: Created a candidate along with respective report
+          content:
+            text/plain:
+              schema:
+                type: string
+
+
+  /api/v1/candidates/{candidate-id}:
+    get:
+      summary: Fetch general information for given candidate id
+      operationId: candidateInfo
+      parameters:
+        - name: JWT
+          in: cookie
+          required: true
+          schema:
+            type: string
+            example: "eyJhbGciOiJIUz..."
+        - name: candidate-id
+          in: path
+          required: true
+          schema:
+            type: integer
+
+      responses:
+        "200":
+          description: Fetched general information for given candidate id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CandidateGeneralInfo'
+
+        "401":
+          description: Unauthorized
+
+        "404":
+          description: Candidate not found
+
+
+
+
+
+
+  /api/v1/candidates/{candidate-id}/reports:
+    get:
+      summary: show report details for given candidate id
+      operationId: candidateReportFetch
+      parameters:
+        - name: JWT
+          in: cookie
+          required: true
+          schema:
+            type: string
+            example: "eyJhbGciOiJIUz..."
+        - name: candidate-id
+          in: path
+          required: true
+          schema:
+            type: string
+
+
+      responses:
+        "200":
+          description: Adjudication status updated
+
+        "404":
+          description: Candidate not found
+        "401":
+          description: Unauthorized
+
+
+
+
+
+
+            #need to insert a logic where a row with adverse action details such as name, status, pre-notice-date,post-notice-date
+
+
+
+            # /api/v1/candidates/{candidate-id}/general-info:
+            #   get:
+            #     summary: Fetch general information about given candidate
+            #     operationId: candidateGeneralInfo
+            #     parameters:
+            #       - name: JWT
+            #         in: cookie
+            #         required: true
+            #         schema:
+            #           type: string
+            #           example: "eyJhbGciOiJIUz..."
+            #       - name: candidate-id
+            #         in: path
+            #         required: true
+            #         schema:
+            #           type: integer
+
+            #     responses:
+            #       "200":
+            #         description: Fetched general information about given candidate
+            #         content:
+            #           application/json:
+            #             schema:
+            #               $ref: '#/components/schemas/CandidateGeneralInfo'
+
+          #       "401":
+          #         description: Unauthorized
+
+          #       "404":
+          #         description: Candidate not found
+
+          # /api/v1/candidates/{candidate-id}/report-info:
+          #   get:
+          #     summary: Fetch report information about the given candidate
+          #     operationId: candidateReportInfo
+          #     parameters:
+          #       - name: JWT
+          #         in: cookie
+          #         required: true
+          #         schema:
+          #           type: string
+          #           example: "eyJhbGciOiJIUz..."
+          #       - name: candidate-id
+          #         in: path
+          #         required: true
+          #         schema:
+          #           type: integer
+
+          #     responses:
+          #       "200":
+          #         description: Fetched report information about the given candidate
+          #         content:
+          #           application/json:
+          #             schema:
+          #               $ref: '#/components/schemas/CandidateReportInfo'
+          #       "401":
+          #         description: Unauthorized
+
+    #       "404":
+    #         description: Candidate not found
+
+  /api/v1/candidates/{candidate-id}/court-searches:
+    post:
+      summary: Creates a court search record for the given candidate
+      operationId: createCourtSearchRecord
+      parameters:
+        - name: JWT
+          in: cookie
+          required: true
+          schema:
+            type: string
+            example: "eyJhbGciOiJIUz..."
+        - name: candidate-id
+          in: path
+          required: true
+          schema:
+            type: integer
+
+      responses:
+        "200":
+          description: Created a court search record for the given candidate
+          content:
+            text/plain:
+              schema:
+                type: string
+
+        "401":
+          description: Unauthorized
+
+        "404":
+          description: Candidate not found
+
+    get:
+      summary: Fetch court search information about the given candidate
+      operationId: candidateCourtSearchInfo
+      parameters:
+        - name: JWT
+          in: cookie
+          required: true
+          schema:
+            type: string
+            example: "eyJhbGciOiJIUz..."
+        - name: candidate-id
+          in: path
+          required: true
+          schema:
+            type: integer
+
+      responses:
+        "200":
+          description: Fetched court search information about the given candidate
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CandidateCourtSearchInfo'
+
+        "401":
+          description: Unauthorized
+
+        "404":
+          description: Candidate not found
+
+
+  /api/v1/candidates/{candidate-id}/adverse-actions:
+    post:
+      summary: Creates an adverse action, modify report details for given candidate id
+      operationId: createAdverseAction
+      parameters:
+        - name: JWT
+          in: cookie
+          required: true
+          schema:
+            type: string
+            example: "eyJhbGciOiJIUz..."
+        - name: candidate-id
+          in: path
+          required: true
+          schema:
+            type: string
+
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AdverseActionRequest'
+
+      responses:
+        "201":
+          description: Created an adverse action, modify report details for given candidate id
+
+        "404":
+          description: Candidate not found
+        "401":
+          description: Unauthorized
+
+  /api/v1/adverse-actions:
+    get:
+      summary: Fetch a paginated list of adverse actions with optional filtering on name and status
+      operationId: adverse-actions
+      parameters:
+        - name: JWT
+          in: cookie
+          required: true
+          schema:
+            type: string
+            example: "eyJhbGciOiJIUz..."
+        - name: name
+          in: query
+          required: false
+          schema:
+            type: string
+          description: Filter candidates by name
+
+        - name: status
+          in: query
+          required: false
+          schema:
+            type: string
+            enum: [PENDING,SCHEDULED, DISPUTE, CANCELLED, UNDELIVERABLE, COMPLETED]
+
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+          description: "Page number (default is 1)"
+
+        - name: size
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+          description: "Number of records per page (default is 10)"
+
+        - name: sort
+          in: query
+          required: false
+          schema:
+            type: string
+            example: "name,asc"
+          description: "Sort field and order (e.g., 'name,asc' or 'age,desc')"
+
+      responses:
+        "200":
+          description: Fetched a paginated list of adverse actions with optional filtering on name and sta
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedAdverseActionsResponse'
+        "400":
+          description: No adverse-action found
+        "401":
+          description: Unauthorized
+
+
   /api/v1/candidates-with-reports:
     get:
       summary: Fetch a paginated list of candidate reports with optional filtering on name, adjudication and status
@@ -224,260 +534,6 @@ paths:
           description: Unauthorized
 
 
-  /api/v1/candidates/{candidate-id}/report:
-    patch:
-      summary: modify adjudication status for given candidate id
-      operationId: candidateReportPatch
-      parameters:
-        - name: JWT
-          in: cookie
-          required: true
-          schema:
-            type: string
-            example: "eyJhbGciOiJIUz..."
-        - name: candidate-id
-          in: path
-          required: true
-          schema:
-            type: string
-
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CandidateReportAdjudicationRequest'
-
-      responses:
-        "200":
-          description: Adjudication status updated
-
-        "404":
-          description: Candidate not found
-        "401":
-          description: Unauthorized
-
-    get:
-      summary: show report details for given candidate id
-      operationId: candidateReportFetch
-      parameters:
-        - name: JWT
-          in: cookie
-          required: true
-          schema:
-            type: string
-            example: "eyJhbGciOiJIUz..."
-        - name: candidate-id
-          in: path
-          required: true
-          schema:
-            type: string
-
-
-      responses:
-        "200":
-          description: Adjudication status updated
-
-        "404":
-          description: Candidate not found
-        "401":
-          description: Unauthorized
-
-
-  /api/v1/candidates/{candidate-id}:
-    get:
-      summary: Fetch general information for given candidate id
-      operationId: candidateInfo
-      parameters:
-        - name: JWT
-          in: cookie
-          required: true
-          schema:
-            type: string
-            example: "eyJhbGciOiJIUz..."
-        - name: candidate-id
-          in: path
-          required: true
-          schema:
-            type: integer
-
-      responses:
-        "200":
-          description: Fetched general information for given candidate id
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CandidateGeneralInfo'
-
-        "401":
-          description: Unauthorized
-
-        "404":
-          description: Candidate not found
-
-
-
-
-
-            #need to insert a logic where a row with adverse action details such as name, status, pre-notice-date,post-notice-date
-
-
-
-            # /api/v1/candidates/{candidate-id}/general-info:
-            #   get:
-            #     summary: Fetch general information about given candidate
-            #     operationId: candidateGeneralInfo
-            #     parameters:
-            #       - name: JWT
-            #         in: cookie
-            #         required: true
-            #         schema:
-            #           type: string
-            #           example: "eyJhbGciOiJIUz..."
-            #       - name: candidate-id
-            #         in: path
-            #         required: true
-            #         schema:
-            #           type: integer
-
-            #     responses:
-            #       "200":
-            #         description: Fetched general information about given candidate
-            #         content:
-            #           application/json:
-            #             schema:
-            #               $ref: '#/components/schemas/CandidateGeneralInfo'
-
-          #       "401":
-          #         description: Unauthorized
-
-          #       "404":
-          #         description: Candidate not found
-
-          # /api/v1/candidates/{candidate-id}/report-info:
-          #   get:
-          #     summary: Fetch report information about the given candidate
-          #     operationId: candidateReportInfo
-          #     parameters:
-          #       - name: JWT
-          #         in: cookie
-          #         required: true
-          #         schema:
-          #           type: string
-          #           example: "eyJhbGciOiJIUz..."
-          #       - name: candidate-id
-          #         in: path
-          #         required: true
-          #         schema:
-          #           type: integer
-
-          #     responses:
-          #       "200":
-          #         description: Fetched report information about the given candidate
-          #         content:
-          #           application/json:
-          #             schema:
-          #               $ref: '#/components/schemas/CandidateReportInfo'
-          #       "401":
-          #         description: Unauthorized
-
-    #       "404":
-    #         description: Candidate not found
-
-  /api/v1/candidates/{candidate-id}/court-searches:
-    get:
-      summary: Fetch court search information about the given candidate
-      operationId: candidateCourtSearchInfo
-      parameters:
-        - name: JWT
-          in: cookie
-          required: true
-          schema:
-            type: string
-            example: "eyJhbGciOiJIUz..."
-        - name: candidate-id
-          in: path
-          required: true
-          schema:
-            type: integer
-
-      responses:
-        "200":
-          description: Fetched court search information about the given candidate
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CandidateCourtSearchInfo'
-
-        "401":
-          description: Unauthorized
-
-        "404":
-          description: Candidate not found
-
-
-  /api/v1/adverse-actions:
-    get:
-      summary: Fetch a paginated list of adverse actions with optional filtering on name and status
-      operationId: adverse-actions
-      parameters:
-        - name: JWT
-          in: cookie
-          required: true
-          schema:
-            type: string
-            example: "eyJhbGciOiJIUz..."
-        - name: name
-          in: query
-          required: false
-          schema:
-            type: string
-          description: Filter candidates by name
-
-        - name: status
-          in: query
-          required: false
-          schema:
-            type: string
-            enum: [PENDING,SCHEDULED, DISPUTE, CANCELLED, UNDELIVERABLE, COMPLETED]
-
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            minimum: 1
-          description: "Page number (default is 1)"
-
-        - name: size
-          in: query
-          required: false
-          schema:
-            type: integer
-            minimum: 1
-            maximum: 100
-          description: "Number of records per page (default is 10)"
-
-        - name: sort
-          in: query
-          required: false
-          schema:
-            type: string
-            example: "name,asc"
-          description: "Sort field and order (e.g., 'name,asc' or 'age,desc')"
-
-      responses:
-        "200":
-          description: Fetched a paginated list of adverse actions with optional filtering on name and sta
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PaginatedAdverseActionsResponse'
-        "400":
-          description: No adverse-action found
-        "401":
-          description: Unauthorized
-
 
 
 components:
@@ -491,13 +547,16 @@ components:
         to-date:
           type: string
 
-    CandidateReportAdjudicationRequest:
+    AdverseActionRequest:
       type: object
-      required: [adjudicationStatus,notice-date]
+      required: [adjudication,adjudicationStatus,notice-date]
       properties:
-        adjudicationStatus:
+        adjudication:
           type: string
           enum: [ADVERSE ACTION, ENGAGE]
+        adjudicationStatus:
+          type: string
+          enum: [CLEAR, CONSIDER]
         notice-days:
           type: integer
           example: 5
@@ -554,7 +613,7 @@ components:
 
     CandidateGeneralInfo:
       type: object
-      required: [name,email,dob,phone,zipcode,social_security_number,drivers_license_number,createdAt]
+      required: [name,email,dob,phone,zipcode,social_security_number,drivers_license_number,createdAt,location]
       properties:
         name:
           type: string
@@ -571,6 +630,8 @@ components:
         drivers_license_number:
           type: string
         createdAt:
+          type: string
+        location:
           type: string
 
 
@@ -688,8 +749,10 @@ components:
 
     SignUpRequest:
       type: object
-      required: [email, password]
+      required: [name,email, password]
       properties:
+        name:
+          type: string
         email:
           type: string
           format: email
@@ -727,7 +790,5 @@ components:
         newPassword:
           type: string
           format: password
-
-
 
 
